...
                            Destinations.CREATE_TICKET.route + "/${eventId}")
                      }) {
                        Icon(
                            painter = painterResource(id = R.drawable.add_icon),
                            contentDescription = null)
                        Text(
                            "Add Ticket",
                            modifier = Modifier.padding(start = 12.dp),
                            fontSize = 18.sp)
                      }
                }
          }
        }
...
